--- a/views/index.pug
+++ b/views/index.pug
@@ -3,18 +3,18 @@ extends layout
 block content
   nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top
     .container
-      a.navbar-brand.js-scroll-trigger(href='#page-top') Start Bootstrap
+      a.navbar-brand.js-scroll-trigger(href='#page-top') Comenzar
       button.navbar-toggler.navbar-toggler-right(type='button' data-toggle='collapse' data-target='#navbarResponsive' aria-controls='navbarResponsive' aria-expanded='false' aria-label='Toggle navigation')
         | Menu
         i.fas.fa-bars
       #navbarResponsive.collapse.navbar-collapse
         ul.navbar-nav.ml-auto
           li.nav-item
-            a.nav-link.js-scroll-trigger(href='#about') About
+            a.nav-link.js-scroll-trigger(href='#about') Nosotros
           li.nav-item
-            a.nav-link.js-scroll-trigger(href='#projects') Projects
+            a.nav-link.js-scroll-trigger(href='#projects') Bicicletas
           li.nav-item
-            a.nav-link.js-scroll-trigger(href='#signup') Contact
+            a.nav-link.js-scroll-trigger(href='#signup') Contacto
   // Masthead
   header.masthead
     .container.d-flex.h-100.align-items-center
@@ -27,58 +27,26 @@ block content
     .container
       .row
         .col-lg-8.mx-auto
-          h2.text-white.mb-4 Built with Bootstrap 4
+          h2.text-white.mb-4 Red de biciletas
           p.text-white-50
-            | Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            a(href='https://startbootstrap.com/theme/grayscale/') the preview page
-            |                             . The theme is open source, and you can use it for any purpose, personal or commercial.
+            | Bienvenidos al mundo de las bicicletas, viaja sin limites y siente la brisa de la libertad 
+            a(href='https://startbootstrap.com/theme/grayscale/') No lo pienses mas
+            |                             . La comunidad te está esperando unete
       img.img-fluid(src='assets/img/ipad.png' alt='')
   // Projects
   section#projects.projects-section.bg-light
     .container
-      // Featured Project Row
-      .row.align-items-center.no-gutters.mb-4.mb-lg-5
-        .col-xl-8.col-lg-7
-          img.img-fluid.mb-3.mb-lg-0(src='assets/img/bg-masthead.jpg' alt='')
-        .col-xl-4.col-lg-5
-          .featured-text.text-center.text-lg-left
-            h4 Shoreline
-            p.text-black-50.mb-0
-              | Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!
-      // Project One Row
-      .row.justify-content-center.no-gutters.mb-5.mb-lg-0
-        .col-lg-6
-          img.img-fluid(src='assets/img/demo-image-01.jpg' alt='')
-        .col-lg-6
-          .bg-black.text-center.h-100.project
-            .d-flex.h-100
-              .project-text.w-100.my-auto.text-center.text-lg-left
-                h4.text-white Misty
-                p.mb-0.text-white-50
-                  | An example of where you can put an image of a project, or anything else, along with a description.
-                hr.d-none.d-lg-block.mb-0.ml-0
-      // Project Two Row
-      .row.justify-content-center.no-gutters
-        .col-lg-6
-          img.img-fluid(src='assets/img/demo-image-02.jpg' alt='')
-        .col-lg-6.order-lg-first
-          .bg-black.text-center.h-100.project
-            .d-flex.h-100
-              .project-text.w-100.my-auto.text-center.text-lg-right
-                h4.text-white Mountains
-                p.mb-0.text-white-50
-                  | Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!
-                hr.d-none.d-lg-block.mb-0.mr-0
+      #main_map
   // Signup
   section#signup.signup-section
     .container
       .row
         .col-md-10.col-lg-8.mx-auto.text-center
           i.far.fa-paper-plane.fa-2x.mb-2.text-white
-          h2.text-white.mb-5 Subscribe to receive updates!
+          h2.text-white.mb-5 Subscribete para recibir noticias!
           form.form-inline.d-flex
-            input#inputEmail.form-control.flex-fill.mr-0.mr-sm-2.mb-3.mb-sm-0(type='email' placeholder='Enter email address...')
-            button.btn.btn-primary.mx-auto(type='submit') Subscribe
+            input#inputEmail.form-control.flex-fill.mr-0.mr-sm-2.mb-3.mb-sm-0(type='email' placeholder='Escribe tu correo electronico...')
+            button.btn.btn-primary.mx-auto(type='submit') Subscribirse
   // Contact
   section.contact-section.bg-black
     .container
@@ -87,9 +55,9 @@ block content
           .card.py-4.h-100
             .card-body.text-center
               i.fas.fa-map-marked-alt.text-primary.mb-2
-              h4.text-uppercase.m-0 Address
+              h4.text-uppercase.m-0 Dirección
               hr.my-4
-              .small.text-black-50 4923 Market Street, Orlando FL
+              .small.text-black-50 Avenida 100pre viva
         .col-md-4.mb-3.mb-md-0
           .card.py-4.h-100
             .card-body.text-center
@@ -97,14 +65,14 @@ block content
               h4.text-uppercase.m-0 Email
               hr.my-4
               .small.text-black-50
-                a(href='#!') hello@yourdomain.com
+                a(href='#!') haeh2007@gmail.com
         .col-md-4.mb-3.mb-md-0
           .card.py-4.h-100
             .card-body.text-center
               i.fas.fa-mobile-alt.text-primary.mb-2
-              h4.text-uppercase.m-0 Phone
+              h4.text-uppercase.m-0 Telefono
               hr.my-4
-              .small.text-black-50 +1 (555) 902-8832
+              .small.text-black-50 +57 (316) 380-2307
       .social.d-flex.justify-content-center
         a.mx-2(href='#!')
           i.fab.fa-twitter
@@ -114,7 +82,7 @@ block content
           i.fab.fa-github
   // Footer
   footer.footer.bg-black.small.text-center.text-white-50
-    .container Copyright &copy; Your Website 2020
+    .container Copyright &copy; ErirApps 2020
   // Bootstrap core JS
   script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')
   script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js')
@@ -122,3 +90,4 @@ block content
   script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js')
   // Core theme JS
   script(src='/javascripts/scripts.js')
+  script(src='/javascripts/map.js')
