--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(name='description' content='')
     meta(name='author' content='')
-    title Grayscale - Start Bootstrap Theme
+    title RED BICICLETAS
     link(rel='icon' type='image/x-icon' href='assets/img/favicon.ico')
     // Font Awesome icons (free version)
     script(src='https://use.fontawesome.com/releases/v5.15.1/js/all.js' crossorigin='anonymous')
