--- a/views/index.pug
+++ b/views/index.pug
@@ -15,6 +15,8 @@ block content
             a.nav-link.js-scroll-trigger(href='#projects') Bicicletas
           li.nav-item
             a.nav-link.js-scroll-trigger(href='#signup') Contacto
+          li.nav-item
+            a.nav-link.js-scroll-trigger(href='/bicicletas') Lista de Bicicletas
   // Masthead
   header.masthead
     .container.d-flex.h-100.align-items-center
